# adaptive-cg

./: .gitignore  CLAUDE.md  pyproject.toml
data/forcefield/: cg_forcefield.json
notebooks/: aa_simulate_colab.ipynb  aa_simulate_colab_rust.ipynb
rust/cg_engine/: Cargo.toml
rust/cg_engine/src/: lib.rs
src/adaptive_cg/: __init__.py  __main__.py
src/adaptive_cg/commands/: __init__.py  adaptive_simulate.py  analyze.py  cg_simulate.py  compare_optimizers.py  conformer.py  evaluate.py  extract.py  fetch.py  list_molecules.py  optimize.py  parameterize.py  pareto.py  region_breakdown.py  run.py  simulate.py  sweep.py
src/adaptive_cg/core/: __init__.py  adaptive.py  compute_budget.py  engine.py  extract.py  hardware.py  mapping.py  molecule.py  optimizer.py  parameterize.py  quality.py  simulation.py  strategies.py
